Fix layout bug for notifications on smaler devices

--- a/src/Assets/Styles/Components/Notifications/notifications.scss
+++ b/src/Assets/Styles/Components/Notifications/notifications.scss
@@ -18,6 +18,8 @@
 
   .list {
     flex-direction: column;
+    flex-wrap: nowrap;
+    padding-top: 1em;
   }
 
   .no-notifications {
